--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
-extensions/manifests/*.json
-extensions/apis/*.json
+extensions/chrome-manifests/*.json
+extensions/chrome-apis/*.json
+extensions/chrome-details/*.json
+extensions/firefox-manifests/*.json
+extensions/firefox-apis/*.json
+extensions/firefox-details/*.json
+__pycache__/*
+temp/*
+*.pyc
